--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "normalize.css": "^8.0.1"
+    "firebase": "^9.21.0",
+    "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.43.8",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
