--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && && vite build",
+    "build": "tsc --noEmit && vite build",
     "lint": "eslint src --ext ts,tsx",
     "prettier": "prettier src --check",
     "preview": "vite preview"
