--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "normalize.css": "^8.0.1",
     "firebase": "^9.21.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
