--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-tooltip": "^5.13.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
