--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.2",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0"
   },
