--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.0"
   },
   "devDependencies": {
